<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">VoidApplication</string>
    <string name="welcome_login">Login</string>
    <string name="your_space_your_collections">Your Space . Your Collections!</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="your_space_your_collections2">Your Space . Your Collections!</string>
    <string name="name">Name</string>
    <string name="email_ca">Email</string>
    <string name="password_ca">Password</string>
    <string name="logout">logout</string>
    <string name="collections">Collections</string>
    <string name="category_header">View all your categories below or create a new category.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_contact">Add Collection</string>
    <string name="add_title">Title</string>
    <string name="add_decription">Description</string>
    <string name="save_collection">Save Collection</string>
</resources>